--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -1,4 +1,5 @@
 <div class="container col-md-5">
+    <h1 class="titulo-importante">Ingrese credenciales</h1>
     <form action="/api/sessions/login" method="post" enctype="application/x-www-form-urlencoded">
         <label for="_email">Email:</label>
         <input type="email" name="email" id="_email" class="form-control my-2 ms-1" />
@@ -6,6 +7,6 @@
         <label for="_pass">Password:</label>
         <input type="password" name="password" id="_pass" class="form-control my-2 ms-1" />
 
-        <button type="submit" class="btn btn-info text-decoration text-center" >Login</button>
+        <button type="submit" class="btn btn-info text-decoration text-center">Login</button>
     </form>
 </div>
