--- a/src/views/reset_password.handlebars
+++ b/src/views/reset_password.handlebars
@@ -1,11 +1,11 @@
 <div class="container col-md-5">
     <h1 class="titulo-importante">Reset Password</h1>
     <form action="/api/sessions/reset_password" method="post" enctype="application/x-www-form-urlencoded">
-        <label for="email">Email:</label>
-        <input type="email" name="email" class="form-control my-2" id="email" required/>
+        <label for="_email">Email:</label>
+        <input type="email" name="email" class="form-control my-2" id="_email" required/>
 
-        <label for="pass">New Password:</label>
-        <input type="password" name="newPassword" class="form-control my-2" id="pass" required/>
+        <label for="_pass">New Password:</label>
+        <input type="password" name="password" class="form-control my-2" id="_pass" required/>
 
         <button type="submit" class="btn btn-info text-decoration text-center">Reset password</button>
     </form>
