--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -8,5 +8,8 @@
         <input type="password" name="password" id="_pass" class="form-control my-2 ms-1" />
 
         <button type="submit" class="btn btn-info text-decoration text-center">Login</button>
+        <div class="my-3">
+            <a href="/api/sessions/github" class="btn btn-info text-decoration text-center">Entrar con Github</a>
+        </div>
     </form>
 </div>
